--- a/Styling/tambah.css
+++ b/Styling/tambah.css
@@ -93,8 +93,8 @@ nav ul li a{
 nav ul li a:hover{
     text-decoration: underline;
 }
-.tampilan img{
-    width: 100%;
+.tampilan{
+    background-color: rgb(102, 102, 102);
 }
 .posisi{
     align-items: center;
@@ -102,8 +102,8 @@ nav ul li a:hover{
     display: flex;
     flex-wrap: wrap;
     position: absolute;
-    top: 30vh;
-    left: 90vh;
+    top: 20vh;
+    left: 20px;
 }
 .card{
     width: 300px;
@@ -148,44 +148,11 @@ nav ul li a:hover{
 }
 .btn-order{
     color: white;
-    text-decoration: none;  
+    text-decoration: none;
+    
 }
-footer {
-    padding: 50px 0px;
-    background-color: #343a40;
-    color: #fff;
-    text-align: center;
-  }
-  footer .layar-dalam{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  footer .layar-dalam div{
-    width: 30%;
-  }
-  footer .layar-dalam h5{
-    margin-top: 0px;
-    font-size: 20px;
-    font-weight: bold;
-  }
-  footer .layar-dalam .copy{
-    width: 100%;
-    margin-top: 30px;
-    padding-top: 30px;
-    border-top: 1px solid #666;
-    text-align: center;
-  }
 
 @media screen and (max-width: 991.98px) {
-    .posisi{
-        top: 30vh;
-        left: 30vh;
-    }
-    .tampilan img{
-        height: 100vh;
-        object-fit: cover;
-    }
     .layar-dalam {
         width: 90%;
     }
@@ -210,11 +177,4 @@ footer {
     .tombol-menu{
         display: flex;
     }
-}
-@media screen and (max-width: 484px) {
-    .posisi{
-        top: 30vh;
-        left: 7.5vh;
-    }
-
 }
